# Domotica-GUI

./: CMakeLists.txt  Dependencies.cmake  README.md
App/: CMakeLists.txt  imgui.ini
App/Shaders/: BufferA.glsl  Fragment.glsl  Game.glsl  loading.glsl
App/Source/: LoadingLayer.cpp  LoadingLayer.h  Main.cpp  MainLayer.cpp  MainLayer.h
App/Source/Fonts/: Fonts.h  Icons.h  MainFont.cpp
App/Source/Serial/: SerialPort.cpp  SerialPort.h
App/assets/: temp
App/assets/shaders/: BallBloom.glsl  Renderer2D_Line.glsl  Renderer2D_Quad.glsl  UI_shader.glsl  testui.glsl
Core/: CMakeLists.txt
Core/Source/Core/: Application.cpp  Application.h  Event.h  ImGuiLayer.cpp  ImGuiLayer.h  Image.cpp  Image.h  Layer.cpp  Layer.h  Random.cpp  Random.h  Window.cpp  Window.h
Core/Source/Core/Core/: Buffer.h  Timer.h  UUID.cpp  UUID.h
Core/Source/Core/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Font.cpp  Font.h  GLUtils.cpp  MSDFData.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
Core/Source/Core/Serialization/: StreamReader.cpp  StreamReader.h  StreamWriter.cpp  StreamWriter.h
Core/Source/Core/UI/: UI.cpp  UI.h
Core/Source/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
