#
# Core
#

file(GLOB_RECURSE SOURCES
    vendor/stb/stb_image.h
    vendor/stb/stb_image.cpp
    Source/Core/*.h
    Source/Core/*.cpp
    Source/Platform/*.cpp
    Source/Platform/*.h
    Source/Embed/*.embed
)

add_subdirectory(vendor/msdf-atlas-gen)

add_library(Core STATIC)

target_sources(Core PRIVATE ${SOURCES})

# Match VS filters to directory structure on disk
source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES ${SOURCES})

add_compile_definitions(
    GLFW_INCLUDE_NONE
)

target_link_libraries(Core glfw)
target_link_libraries(Core glad)
target_link_libraries(Core glm)
target_link_libraries(Core imgui)
target_link_libraries(Core implot)
target_link_libraries(Core msdf-atlas-gen)

target_include_directories(Core PUBLIC
    Source
    vendor/stb
)
